[gd_scene load_steps=7 format=3 uid="uid://bus1imgmdkbbi"]

[ext_resource type="Script" path="res://MENUS/options.gd" id="1_v2f8k"]
[ext_resource type="AudioStream" uid="uid://vxsqh7cnwqg2" path="res://assets/Music/Temple.mp3" id="3_i5p66"]
[ext_resource type="PackedScene" uid="uid://c4w2mhtvquqng" path="res://scences/space_background.tscn" id="4_gqdqv"]
[ext_resource type="Texture2D" uid="uid://17em5so353js" path="res://assets/art/Main Menu/IMG_0516.PNG" id="4_n8dgi"]
[ext_resource type="Texture2D" uid="uid://43acfhk3eyf5" path="res://assets/art/Main Menu/IMG_0517.PNG" id="5_k4bsw"]
[ext_resource type="FontFile" uid="uid://cvkofnt8n3rho" path="res://assets/fonts/Pixeled.ttf" id="11_ks1t0"]

[node name="options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2f8k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -40.0
offset_right = 102.0
offset_bottom = -24.0
scale = Vector2(0.770779, 0.760001)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="master" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_ks1t0")
theme_override_font_sizes/font_size = 5
text = "Master Volume:                                       Mute:"

[node name="Master volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/Master volume"]
process_mode = 3
layout_mode = 0
offset_left = 166.066
offset_top = -20.6316
offset_right = 190.066
offset_bottom = 3.36842

[node name="sfx" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_ks1t0")
theme_override_font_sizes/font_size = 5
text = "SFX Volume:                                               Mute:"

[node name="SFX volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="sfx" type="CheckBox" parent="MarginContainer/VBoxContainer/SFX volume"]
process_mode = 3
layout_mode = 0
offset_left = 166.066
offset_top = -20.6316
offset_right = 190.066
offset_bottom = 3.36842

[node name="RESET" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_ks1t0")
theme_override_font_sizes/font_size = 5
text = "Reset Highscore"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -88.0
offset_right = 32.0
offset_bottom = -60.0
theme_override_fonts/font = ExtResource("11_ks1t0")
theme_override_font_sizes/font_size = 10
text = "options"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i5p66")
autoplay = true

[node name="Back" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -224.0
offset_right = 48.0
offset_bottom = -200.0
texture_normal = ExtResource("4_n8dgi")
texture_pressed = ExtResource("4_n8dgi")
texture_hover = ExtResource("5_k4bsw")
texture_focused = ExtResource("5_k4bsw")

[node name="space background" parent="." instance=ExtResource("4_gqdqv")]

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Master volume" to="." method="_on_master_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Master volume/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX volume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/SFX volume/sfx" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RESET" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_button_pressed"]
